[FIX]: Spacing on home.html & added permissions

--- a/web/src/main/resources/static/home.css
+++ b/web/src/main/resources/static/home.css
@@ -5,7 +5,7 @@ h2 {
 }
 
 .positions{
-    background-color:#f9f9f9;
+    background-color: #ffffff;
     text-align:center;
 }
 
